Add answers to question service.
