# server/gateways/api/design/question.go
@@ -14,50 +14,103 @@ func questionIdAttribute(fieldName string) {
 	})
 }
 
-var questionReadRequest = dsl.Type("QuestionReadRequest", func() {
-	questionIdAttribute("id")
-	dsl.Required("id")
-})
+func answerIdAttribute(fieldName string) {
+	dsl.Attribute(fieldName, dsl.String, func() {
+		dsl.Description("回答のID")
 
-var questionCreateRequest = dsl.Type("QuestionCreateRequest", func() {
-	titleAttribute("title")
-	contentAttribute("content")
-	dsl.Required("title", "content")
-})
+		dsl.Pattern("^[A-Za-z0-9_-]+$")
+		dsl.MinLength(11)
+		dsl.MaxLength(11)
 
-var questionUpdateRequest = dsl.Type("QuestionUpdateRequest", func() {
-	// Path param
-	questionIdAttribute("id")
-	// Body
-	titleAttribute("title")
-	contentAttribute("content")
+		dsl.Example("exampleId01")
+	})
+}
 
-	dsl.Required("id")
-})
-
-var questionDeleteRequest = dsl.Type("QuestionDeleteRequest", func() {
-	questionIdAttribute("id")
-	dsl.Required("id")
-})
-
-var questionResult = dsl.ResultType("question-result", "QuestionResult", func() {
-	dsl.Attributes(func() {
+var (
+	questionReadRequest = dsl.Type("QuestionReadRequest", func() {
 		questionIdAttribute("id")
+		dsl.Required("id")
+	})
+	questionCreateRequest = dsl.Type("QuestionCreateRequest", func() {
 		titleAttribute("title")
 		contentAttribute("content")
-		dsl.Required("id", "title", "content")
+		dsl.Required("title", "content")
+	})
+	questionUpdateRequest = dsl.Type("QuestionUpdateRequest", func() {
+		// Path param
+		questionIdAttribute("id")
+		// Body
+		titleAttribute("title")
+		contentAttribute("content")
+
+		dsl.Required("id")
+	})
+	questionDeleteRequest = dsl.Type("QuestionDeleteRequest", func() {
+		questionIdAttribute("id")
+		dsl.Required("id")
 	})
 
-	dsl.View("default", func() {
-		dsl.Attribute("id")
-		dsl.Attribute("title")
-		dsl.Attribute("content")
+	answerCreateRequest = dsl.Type("AnswerCreateRequest", func() {
+		questionIdAttribute("id")
+		contentAttribute("content")
+		dsl.Required("id", "content")
 	})
+	answerReadRequest = dsl.Type("AnswerReadRequest", func() {
+		questionIdAttribute("id")
+		answerIdAttribute("answer_id")
+		dsl.Required("id", "answer_id")
+	})
+	answerUpdateRequest = dsl.Type("AnswerUpdateRequest", func() {
+		questionIdAttribute("id")
+		answerIdAttribute("answer_id")
+		contentAttribute("content")
+		dsl.Required("id", "answer_id", "content")
+	})
+	answerDeleteRequest = dsl.Type("AnswerDeleteRequest", func() {
+		questionIdAttribute("id")
+		answerIdAttribute("answer_id")
+		dsl.Required("id", "answer_id")
+	})
+)
 
-	dsl.View("only-id", func() {
-		dsl.Attribute("id")
+var (
+	questionResult = dsl.ResultType("question-result", "QuestionResult", func() {
+		dsl.Attributes(func() {
+			questionIdAttribute("id")
+			titleAttribute("title")
+			contentAttribute("content")
+			dsl.Required("id", "title", "content")
+		})
+
+		dsl.View("default", func() {
+			dsl.Attribute("id")
+			dsl.Attribute("title")
+			dsl.Attribute("content")
+		})
+
+		dsl.View("only-id", func() {
+			dsl.Attribute("id")
+		})
 	})
-})
+	answerResult = dsl.ResultType("answer-result", "AnswerResult", func() {
+		dsl.Attributes(func() {
+			answerIdAttribute("answer_id")
+			questionIdAttribute("question_id")
+			contentAttribute("content")
+			dsl.Required("answer_id", "question_id", "content")
+		})
+
+		dsl.View("default", func() {
+			dsl.Attribute("answer_id")
+			dsl.Attribute("question_id")
+			dsl.Attribute("content")
+		})
+
+		dsl.View("only-id", func() {
+			dsl.Attribute("answer_id")
+		})
+	})
+)
 
 var _ = dsl.Service("questions", func() {
 	dsl.Description("質問サービス")
@@ -127,6 +180,70 @@ var _ = dsl.Service("questions", func() {
 
 		dsl.HTTP(func() {
 			dsl.DELETE("/{id}")
+
+			dsl.Response(dsl.StatusOK)
+		})
+	})
+
+	dsl.Method("Create Answer", func() {
+		dsl.Description("Create an answer for a question.")
+
+		dsl.Payload(answerCreateRequest)
+
+		dsl.Result(answerResult, func() {
+			dsl.View("default")
+		})
+
+		dsl.HTTP(func() {
+			dsl.POST("/{id}/answers")
+
+			dsl.Response(dsl.StatusOK)
+		})
+	})
+
+	dsl.Method("Read Answer", func() {
+		dsl.Description("Read an answer for a question.")
+
+		dsl.Payload(answerReadRequest)
+
+		dsl.Result(answerResult, func() {
+			dsl.View("default")
+		})
+
+		dsl.HTTP(func() {
+			dsl.GET("/{id}/answers/{answer_id}")
+
+			dsl.Response(dsl.StatusOK)
+		})
+	})
+
+	dsl.Method("Update Answer", func() {
+		dsl.Description("Update an answer for a question.")
+
+		dsl.Payload(answerUpdateRequest)
+
+		dsl.Result(answerResult, func() {
+			dsl.View("default")
+		})
+
+		dsl.HTTP(func() {
+			dsl.PUT("/{id}/answers/{answer_id}")
+
+			dsl.Response(dsl.StatusOK)
+		})
+	})
+
+	dsl.Method("Delete Answer", func() {
+		dsl.Description("Delete an answer for a question.")
+
+		dsl.Payload(answerDeleteRequest)
+
+		dsl.Result(answerResult, func() {
+			dsl.View("only-id")
+		})
+
+		dsl.HTTP(func() {
+			dsl.DELETE("/{id}/answers/{answer_id}")
 
 			dsl.Response(dsl.StatusOK)
 		})
